nginx configure login.html

--- a/base/config/nginx/conf.d/dev.conf
+++ b/base/config/nginx/conf.d/dev.conf
@@ -21,6 +21,11 @@ server {
             index index.html;
         }
 
+        location = /login {
+            default_type "text/html";
+            alias /home/vagrant/own/base/assets/login.html;
+        }
+
         location ~ /v1.0/ {
             uwsgi_pass uwsgicluster;
             include /usr/local/nginx-1.9.6/conf/uwsgi_params;
